Use travis install line to install python deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ notifications:
     email: false
 go:
  - 1.2
-after_failure: "cat /home/travis/.pip/pip.log"
+install:
+ - "pip install --quiet --requirement requirements.txt"
