--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ notifications:
 go:
  - 1.2
 install:
- - "pip install --requirement requirements.txt"
+ - "sudo pip install --requirement requirements.txt"
