--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ notifications:
     email: false
 go:
  - 1.2
+before_install:
+ - sudo apt-get update -q
+ - sudo apt-get install -q xclip
 install:
  - "sudo pip install --requirement requirements.txt"
